--- a/Presentation/presentation.qmd
+++ b/Presentation/presentation.qmd
@@ -538,4 +538,57 @@ include_local_figure("Printscreens/GEB_certifiate.png")
 
 ::::
 
+## RRatepol
+
+```{r}
+#| label: rratepol_example_0
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_0.png")
+```
+
+## RRatepol
+
+```{r}
+#| label: rratepol_example_1
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_1.png")
+```
+
+
+## RRatepol
+
+```{r}
+#| label: rratepol_example_2
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_2.png")
+```
+
+
+## RRatepol
+
+```{r}
+#| label: rratepol_example_3
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_3.png")
+```
+
+## RRatepol
+
+
+<!-- Here we need to sortout the legend and also the sample figure (show bins / uncertainty) -->
+
+```{r}
+#| label: rratepol_example_4
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_4.png")
+```
+
+## RRatepol
+
+```{r}
+#| label: rratepol_example_5
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_5.png")
+```
+
+## RRatepol
+
+```{r}
+#| label: rratepol_example_6
+include_local_figure("R_generated/RRatepol/RRatepol_example_p_6.png")
+```
 
